--- a/RV2015/conclusion.tex
+++ b/RV2015/conclusion.tex
@@ -17,7 +17,7 @@ solution is subject to the well known state explosion problem, but
 the results in verifying both simple and relatively complex monitors
 are promising. 
 
-\subsubsection{Efficacy of the eDSL Approach} First, we have
+\subsubsection{Efficacy of the Embedded DSL Approach} First, we have
 demonstrated that the embedded DSL approach is powerful and flexible
 in that we were able to extend the Copilot RV framework with
 verification capabilities. Being embedded in a  higher-order functional language
