--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -3,6 +3,16 @@
 %  Core background 
 %==================
 
+@INPROCEEDINGS{amast93,
+      AUTHOR={N. Halbwachs and F. Lagnier and P. Raymond},
+      TITLE={Synchronous observers and the verification of reactive systems},
+      BOOKTITLE={Third Int. Conf. on Algebraic Methodology and
+              Software Technology, AMAST'93},
+      MONTH={June},
+      EDITOR={M. Nivat and C. Rattray and T. Rus and G. Scollo},
+      PUBLISHER={Springer Verlag},
+      YEAR=1993
+   }
 
 @InProceedings{safe,
   author =       {David Terei and Simon Marlow and Simon Peyton Jones and David Mazi\`{e}res},
@@ -1742,7 +1752,7 @@ month = {December}
   month = 	 {July},
   publisher =    {Springer}}
 
-@Misc{Kind2,
+@Misc{kind,
  author =  {University of Iowa: Kind Research Group},
   title = 	 {Kind 2: {M}ulti-engine {SMT}-based {A}utomatic {M}odel {C}hecker},
   note = {\url{http://kind2-mc.github.io/kind2/}}
