paper.tex wibbles.

--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -99,6 +99,7 @@
 \newcommand{\jonathan}[1]{\textcolor{magenta}{[Jonathan  writes: #1]}}
 \newcommand{\jonathantxt}[1]{\textcolor{magenta}{#1}}
 \newcommand{\alwyn}[1]{\textcolor{blue}{[Alwyn writes: #1]}}
+\newcommand{\lee}[1]{\textcolor{blue}{[Lee: #1]}}
 \newcommand{\draft}[1]{\textcolor{red}{\sf [Draft note: #1]}}
 
 \begin{document}
