--- a/RV2015/Structure.tex
+++ b/RV2015/Structure.tex
@@ -108,8 +108,8 @@ The problem of integer overflows can be tackled by adding automatically to the p
 \subsection{The Light prover and the IL format} 
 
 Our homegrown prover relies on an intermediate representation format called
-{IL}. An IL specification mostly consists in a list of quantifier-free equations
-over integer sequences. These equations contains a free variable $n$ which is
+{IL}. An IL specification mostly consists of a list of quantifier-free equations
+over integer sequences. These equations contain a free variable $n$ which is
 implicitly universally quantified. The IL format is similar to the one used by Hagen~\cite{HagenPhD}.
 
 
