--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -42,8 +42,8 @@ In this paper we describe the theory and implementation of a $k$-induction based
 model-checker~\cite{Sheeran00,EenS03} for Copilot called
 \texttt{copilot-kind}. More precisely, \texttt{copilot-kind} is a model-checking
 framework for Copilot, with two existing backends including a lightweight
-implementation of $k$-induction using Yices~\cite{} and a backend based on
-\emph{Kind2}, implementing both $k$-induction and the IC3~algorithm~\cite{}.
+implementation of $k$-induction using Yices~\cite{Dutertre:cav2014} and a backend based on
+\emph{Kind2}, implementing both $k$-induction and the IC3~algorithm~\cite{Somenzi-FMCAD11}.
 
 After providing a brief introduction to Copilot in Section~\ref{sec:co-intro}
 and to SMT-based $k$-induction in Section~\ref{sec:background}, we introduce
