--- a/RV2015/Related.tex
+++ b/RV2015/Related.tex
@@ -47,7 +47,7 @@ applied to a much wider range of properties than the bounded model
 checking tools used in \texttt{Copilot-Kind}.  The work that is most
 relevant the research presented in this paper is the application of
 the Kind model checking tool to verify Lustre programs~\cite{Hagen08}.
-Kind and its most recent incarnation~\cite{kind2}is designed to model
+Kind and its most recent incarnation~\cite{kind}is designed to model
 check Lustre programs and due to the similarities of the Copilot a
 Lustre we targeted the Kind2 prover to be one of our back ends as
 well.  Yet, to the best of our knowledge, the Boyer-Moore majority
