--- a/RV2015/paper.tex
+++ b/RV2015/paper.tex
@@ -130,7 +130,14 @@ Galois, Inc., Portland, OR, USA\\ \email{leepike@galois.com}
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-TBD
+  Ultra-critical systems are growing more complex and future systems
+  are likely to be autonomous and cannot be assured by traditional
+  means.  Runtime Verification (RV) can act as the last line of
+  defense to protect the public safety, but only if the RV system
+  itself is trusted.  In this paper, we describe a verification system
+  for runtime monitors. This tool is integrated into the Copilot
+  language and framework aimed at RV of ultra-critical hard real-time
+  systems.
 \end{abstract}
 
 \input{intro}
