Changed tense to Examples

--- a/RV2015/CaseStudy.tex
+++ b/RV2015/CaseStudy.tex
@@ -1,4 +1,4 @@
-\section{Example}\label{sec:example}
+\section{Examples}\label{sec:example}
 
 In this section,  we will present several examples of
 \texttt{copilot-kind} applied to verify properties on Copilot
