section just reads conclusion

--- a/RV2015/conclusion.tex
+++ b/RV2015/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Future Work and Conclusion}\label{sec:conclusion}
+\section{Conclusion}\label{sec:conclusion}
 
  Ultra-Critical systems are quickly evolving in complexity, and assured
  RV is a necessary complement to traditional assurance techniques.  
